# Svg-Hexagon

./: Hexagon shaping.ipynb  README.md  hexagon_color.py  pyproject.toml  svg_hexagon.html
.github/workflows/: main.yml
functions/: svg_generator.py  svg_hexagon.html  tesselate.py
hexagon_shaping/: tesselate.py
tests/: functions_test.py  tesselate_test.py
